--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -33,6 +33,10 @@ app-loading-spinner {
   display: none;
 }
 
+.navbar {
+  z-index: 300;
+}
+
 .container {
   max-width: 100%;
   padding: 0;
@@ -67,7 +71,7 @@ app-loading-spinner {
 }
 
 .filter {
-  width: 15em;
+  width: 14em;
 }
 .search-box {
   width: 17em;
@@ -110,7 +114,7 @@ app-loading-spinner {
   min-width: 55px;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 650px) {
   body {
     font-size: 0.8rem;
   }
@@ -118,7 +122,7 @@ app-loading-spinner {
     top: 5em;
   }
   .filter, .search-box {
-    width: 18em;
+    width: 13rem;
     margin-left: unset;
     margin-top: 1em;
   }
@@ -127,6 +131,32 @@ app-loading-spinner {
   }
   .delete-confirmation-blackout {
     height: 10em;
+  }
+  .actions {
+    display: block;
+  }
+  .edit-button, .delete-button {
+    margin: 0;
+  }
+  .edit-button {
+    margin-bottom: 0.25em;
+  }
+  .delete-button {
+    margin-top: 0.25em;
+  }
+}
+
+@media only screen and (min-width: 651px) and (max-width: 991px) {
+  .filter, .search-box {
+    width: 18rem;
+    margin-left: unset;
+    margin-top: 1em;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .add-button {
+    display: none;
   }
 }
 
